--- a/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
+++ b/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
@@ -219,12 +219,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2022-07-13</td>
+<td class="front_matter_column3">2022-07-16</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2:59:36 AM</td>
+<td class="front_matter_column3">7:10:33 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDD4FJOZGOGJAYITKLR01OG2UBDNCU1H2IXQMI1ZNXVMOSHFIVGS0O"><h2>Summary</h2></a><table>
+</table><a name="IDKH0G0EOUM5CQNDK4MFQWAFHUFJ5PUGKKB12MSKDHCPQX3Y3Z4HUJ"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDFSEQUTPRZCOTMR21EOOHND4ZRHOMK5KUATADX5NXDTK0OPZAHGFI">Clearance Constraint (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDLSADSQGF21BHGAWHE3WG24BGLFJIXV1VW0UY03MXEQSLPTZJXWMP">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDWLKJCE1UBU2TOAPMKN4D0JMAZMGIDXCL0OYVWVJSYEBGG0EGCYDI">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#ID0E2ISRJERKAGEMXIX3Y1VQC04GTC30H1O33H32CBXJLZGSDGOQF">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDQZEZAAVD4MZDMIAMDANRV5PX5HHUIAEPBFBUCOH1HM40ELGAJ1L">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDVHA1IGUPJV4PE2HE0JXBUBDLWKR142KSHLJWPWF5HBUNTFY3K2ZC">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDRBTJJG5HX22SPDUGRG3525ZNEP3N5WJN0MSG1HPEUSYAN0PRRYWE">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDINOQUZAIESYJGTMMUV4P2OELJCQRY3XJQUWBDGM2AXYVDLYEXWOP">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID3GGJYSQTEO55JNVGNMLCVJGVRCTQV1IDXH54R3K03DX2N11ZXUHL">Width Constraint (Min=3.5mil) (Max=100mil) (Preferred=10mil) (Disabled)(All)</a></td>
+<td class="column1"><a href="#IDTO31UCJQ4OPHK5NSBULPQYCDLEVAU2RG1DNWI2NTGNOUOPBJMOPG">Width Constraint (Min=0.089mm) (Max=2.54mm) (Preferred=0.254mm) (Disabled)(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAMPUQCJR3OMGMCYCKTAVOJR2YLUMTVVVKQFJJPLJQCM2ECJHSYWH">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDZIAMR13CP4UREAAF2ZU5XI3MCNKXQIPJKBS4UTJFLVK1MWZTEGB">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJDF2WUXW5JQEBITQ4BSY4PGG5CPLHYEGSBDMDYNUWSUN1UZASHFJ">Hole Size Constraint (Min=1mil) (Max=99999mil) (All)</a></td>
+<td class="column1"><a href="#IDLOL5L225MT0XMFJQWCV5HE4QHHH04BF2S5LWNTKPQ21LYCI30ODC">Hole Size Constraint (Min=0.025mm) (Max=2539.975mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHHTTE1FJGALZCLQBVRAIT0GZFKRMMTSGQ1N4LXKV2KWDU3WLLUKF">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDBABF223CGYCTJYPTYXOSYABMON3RDNZESVUZWJNYT5QXYSRESSTJ">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID1PS3QEELODPPL51NPO0BPKZLAPV5PB5IQO110YEV204LQ3TC3C0N">Minimum Solder Mask Sliver (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDMCHERJU4KQ0SMP5MUBUXHB1LJER3EHNL0MT252EM1QED3CTI1BSI">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDKDPEAZ41TDIACTTJ5TH5FYTO2KV1Q1CWP1RPA4XWFQVA3QGGVQJ">Silk To Solder Mask (Clearance=5.906mil) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDAHI311INT2YMOM23MFNMELBEFCE5HGNYMMAUMQFK5DIBCEGMLP5B">Silk To Solder Mask (Clearance=0.15mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDWJI0UPVXIBF4NGVQZJOCKRCR5MOVOI2PJQ5OGJO4YBNQZDCKK5FP">Silk to Silk (Clearance=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDT1IOSPRY0J0DOMXEL02BZTAODLWBNORHSGPKGNEPWVBWSKGDGK2I">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDKIJGQA0F3UGTPRGTQE10MDCRUKKW1VOQXLBG1EJCFSR4VJKIYTOP">Net Antennae (Tolerance=0mil) (All)</a></td>
+<td class="column1"><a href="#IDFIWTRK0XXDYCPGSBL5V5TWDQJCYUOMPE5FFM1MLT3WOT3O0FVLCF">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDLVBEYEUYHJQSBG3OFL5AJCPSFGVEWCR2OMQUOXMDRLWLAWOUZDII">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
+<td class="column1"><a href="#ID2BSDMXIMBY52KAXCL352NX4AYEG4HK1DYKHGUNLA4T5JGIO113AN">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
