changed main power capacitors to 0805

--- a/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
+++ b/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
@@ -219,12 +219,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2022-07-16</td>
+<td class="front_matter_column3">2022-07-30</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">7:15:25 PM</td>
+<td class="front_matter_column3">5:17:28 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="ID51WPMJW0PZNZLHO1OWULACQPBJVJGTDUUL3HXOMWNRCQKTTUDM0G"><h2>Summary</h2></a><table>
+</table><a name="ID5TLSNHYVL11SFIHXR14LI3VAKICTB53WFSJCDBJ1TJQIZSBR4CIJ"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID4EC3MIZVNLPNOD4RY1BKDRHU1I5U40PNZKE00NBAAXTF4UETHRTH">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDNOD4EFPN3DUYHJQWC43BQNS1HK4KV5OWAIV2HUDSLFLLMDA3S1GF">Clearance Constraint (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDRA5OEVUKZPTKBRLRSD1D2QDUNII4ISD1Z5OFDSGQ1NKUIO4ABWCO">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#ID0K1M3EBHB0GUPGBVGQ2DJV2NYBM02TWBBQCUZLK5C1YLHOORYCLJ">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDC1JH2TUG4WKMF5KWEMD0TAUP3P1GUFLINNKC12BSNRTKPPSLM1K">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDPLXBGBIC41ENMIZTYQ3DBCDEAKO0WRED0RCSL5FCI2RSJ0TDWQAM">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDDFKSQFSCNARTB4F2EPIVSQFFQPEGULAK4FTQILMONONVKH0R2BUL">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDTYSGHH0QPHN3FMM3DDTTWHYQ3B0VI0J2BPVXTMHRQWIRFNFMD0TE">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID325NNHDXJ1WYCW25IJUBHFHQ3NYC1OQTJHQFYNJ2YNG2W2RGKZWK">Width Constraint (Min=0.089mm) (Max=2.54mm) (Preferred=0.254mm) (Disabled)(All)</a></td>
+<td class="column1"><a href="#IDU4X1QE2FQ5UPCEMZ0EPQSQPI3GGLONUYMS3HKSG3SVOTXYB3JY0D">Width Constraint (Min=3.5mil) (Max=100mil) (Preferred=10mil) (Disabled)(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDZ2YU0NAKSITWIVDLTKS5HV34NNOXFOR1KZQXCYD0FNNQTBWIAOPM">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDAHGOIVHO35CKBG4XAWVEJ3CKPLQNFCQPTHXUWVEVPUEUNHPK0SKO">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDUUKWXWL1JAZUG5QJBTVPUDJB1KDRPJZRFNABIRFDRB4MXIOPTYQE">Hole Size Constraint (Min=0.025mm) (Max=2539.975mm) (All)</a></td>
+<td class="column1"><a href="#IDYNVA2GPKATTSE5NCBLUGVXJQJCAKQF5NX3IHMAG2X0MBETCIDAGE">Hole Size Constraint (Min=1mil) (Max=99999mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID2SEZVD2BED21MPMXX3HPD3GM4ETEXOUL3YCIBQE0B1OQFATAENG">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDIG4OCDAIF0E3NFEKVQG04FPVIBSGT5S3SLDT33H35H0SKIXM5KP">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDHKV4PUJQNGMAPWPCN3TEHX42TDHWZ3RZVZYO5XIY1HH04SQTKLKK">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID1UELVSZW0ENHJS5HZG2KQNRAHI3VVUYRWRV0R5EXTL1D2AN3WG">Minimum Solder Mask Sliver (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTO31UCJQ4OPHK5NSBULPQYCDLEVAU2RG1DNWI2NTGNOUOPBJMOPG">Silk To Solder Mask (Clearance=0.15mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDP2KY4LNMJKU5IIBEZZL2RZMEUYO50ZK4VWA1HBFHDHFYWROZKOG">Silk To Solder Mask (Clearance=5.906mil) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDVDX43SYKCRK2LT3R4UVFQY2BTLJUZY4MKO1DLLMMNDHWV3RKRDGL">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDE1UBSF1AF1UHNOMNRVSZZUJ41KTMLNNAHZMGEQFE501P3PXF32AF">Silk to Silk (Clearance=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDV0OBA1EQFUADPN4TIFQG2UNZIGC32EUMHPXOYDM1VR0ISAIEPENN">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#ID1Z44HUPRCRG0H3KBSLD25PDNNLSTG3W3TE3YBSGFLZVIGMOTCSNO">Net Antennae (Tolerance=0mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDT1IOSPRY0J0DOMXEL02BZTAODLWBNORHSGPKGNEPWVBWSKGDGK2I">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDTIQFGZ5AVPXTDT1ARWS4MZREGEEWVVZFNEYHTECRPMJGNNKFEOWB">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
