moved to a better POR chip

--- a/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
+++ b/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
@@ -224,7 +224,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">5:25:10 PM</td>
+<td class="front_matter_column3">7:03:30 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDEQPDEZXOMJ4DHZDFSLG5QEJHQGRGRPYCEKR55QNZXVBWUKZJT3GD"><h2>Summary</h2></a><table>
+</table><a name="ID1LKZKVFDAIXNO1MIJQ3BMDH40PBDG15UJGOQ1NJMOUUL4FUTJ2KO"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSSCY1FE30PE1PV4IOAM1UQM1PGKITROGUU03GIB5Z0K1AY3NNJL">Clearance Constraint (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDGDY1RUFX1U2DEFDWDPT4UCJTPBHUQRWGD4I00PDEUKQNNEJOCPHI">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDOE4SMDDQ4BZ3MX1IYBOSVOVO2LF1L0W3W3PLQRNONWGFJTN4VBVC">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#ID2VKKXF5OGU3HK3113ATSPKWIWBEB0LCRLRF4MCIIYU1ZA4ID4S4E">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJ3OUSNDQYKD4PEUAKDOO5ZEFIHG2NBBLSZJIOROSM0J5ERJJDVAH">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDCAXCDXCBZWQP1DVRC5QHPGMPIUPF5ZKCCXECGGGRGJ332WBUDQ">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDEC2AZI44PYV5GZUG0P42E5YHHMSGC4IHBRNXNAMFT2ZDP0E0QBRE">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDJDWFYXOQEQ3EKUVUAZ0NH3G5CBXET3KVLDBGIXERHPBYD0LN0HHB">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDZLMC2JF3HMHFBGNPZUCCFSEMEE1Q2X4FQYQH3FIDPVGBPB2L053F">Width Constraint (Min=3.5mil) (Max=100mil) (Preferred=10mil) (Disabled)(All)</a></td>
+<td class="column1"><a href="#ID30ZSHYNV0JH5OCAMP5DVBVKSXH1MOD4HCVHJ4NFUKUXDK4XKUYVI">Width Constraint (Min=0.089mm) (Max=2.54mm) (Preferred=0.254mm) (Disabled)(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDC1QAPWYZ34PPDIBB3IHAORRYJNKADEITBQDC3OONUOFSZHRQ5ISC">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDMVSASOLZSZJFLCISSNM0VO1XWMXBWQAKVPCKCJK25QJ2F31H5UZL">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDVOMXBZZAWVKJLMPABC4FOLQBEH2FL545AH02UHQRVE3IPOMR0WD">Hole Size Constraint (Min=1mil) (Max=99999mil) (All)</a></td>
+<td class="column1"><a href="#IDXIEA1HKZ4PWIECALUS4NWIE1GM33ZLLGOYMQ2YCHH4D4WJSS0AMH">Hole Size Constraint (Min=0.025mm) (Max=2539.975mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDBMN41JHJAJTRBNBP1F2LRAJECF3EWT34S0F1RHHTFGATTOCNB11J">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDZ4XGIFX4ZXF1ECMY1AFQTJY3BDDTQ4ROB1IOS5J4LSKHWRBZE1BO">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDO2MTZOOQ35AXKMFZ3QPCII4AJOE4NPAYH25Z4SLMOT2B3XT2QTNP">Minimum Solder Mask Sliver (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#ID2V3K5IU0ZJBGOJPBCKZUDNGVMPHJBDY5F0OWJRDXZQC41Z4FYV2H">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNEGHGRA5NQNJJKGF4P10MZVWQIPU2VEIFAKXH2IXY5LMG3UK2QWO">Silk To Solder Mask (Clearance=5.906mil) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDR3RSEO3KGUZ1OXOE2X3XCWIH3J0RT4EMBF1X0WCAD03QM0DBZQUK">Silk To Solder Mask (Clearance=0.15mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID4TM4L0QD0IYECYU2CHY4RR1ZQIB4C4PQSAI5IQNNOX4B5K02OIXC">Silk to Silk (Clearance=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#ID5ZLVNZHBJKRONMLZYP4CVKCXSJJFDLWJIXSKGEFCQGGJ4RU2YH0">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDXXWXNJJSYOTVGKNSGTS53E01AOLFJGLWFBGXSXNSFJQD3OG4Z54L">Net Antennae (Tolerance=0mil) (All)</a></td>
+<td class="column1"><a href="#IDR0QN0PUTY1J3GFOIX2CHSI4G3MMQ1AGUBQ45SCGQNJX4AVZY3IAH">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID2UU4AOCV53ECKRIIYI5OTZAB4FOMNQ5P0DI3DPNQNWPEIL0GKSTM">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
+<td class="column1"><a href="#IDW3RFQVE05TKJPUL2BNJXLHULUNS5CH13RBWEW0C41SOYHVEP1CHO">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
