FINAL (HOPEFULLY HOLY SHIT)

--- a/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
+++ b/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
@@ -224,7 +224,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">5:08:43 PM</td>
+<td class="front_matter_column3">6:08:14 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDAR5C5HMCX5APPOCH02WVYI5NNBPNDMRD4CDC5LFRLJYQLBTGQ1OC"><h2>Summary</h2></a><table>
+</table><a name="IDPY1TED4ZYM32DPLT2UQWPYVCXFU12O1N1SKI3PNFKUYIEXHD4EYL"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDBURFYPWJCGBXF2FSUP3OMBXAGFHAUIHSLRC52RC4ELIV5WPPEOLE">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDAXCZVCOG3NKYIJJYIXT3DZ13BKGSXPR0QXBRE1MI0YBYBO11F4DK">Clearance Constraint (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDWBIZLPDKM524PS1DA2RORMIWML45QTWEOADV3BBVKGGCOYG0N5EI">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDH031QQEJ401XEKTKI0KKB3SEGJFGNGI4YRIC2WOZUC43O5CYCGEH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDWWIXY4W0H0YXNGIT2U3HGR5MWPTWRGI2PIOFUDMP12GVPS1FR4UK">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDLX0UUTU0M0HEJ4QSQH1ZIPEGFKJWOSWIXRDL11GMOHJXLVMULL0J">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDZ4KDA2WYRTPUE21OWX02ZJ4UMC11CB1YZCUQAMI2THT5RGPJSEJP">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDKSCRMYWD53PUD0CPHJ3VHOEYII3Q2WJYYIMPOSKI2F0QU2CGQLCL">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDYVLNK03VRDKWCECJLXYQBVFYHSL3XZ3HN2PWRP1V02YFIXJPPEM">Width Constraint (Min=0.089mm) (Max=2.54mm) (Preferred=0.254mm) (Disabled)(All)</a></td>
+<td class="column1"><a href="#IDJCW4RFD4BAEQPNOMS0J3PQQOUHSEJQ1Y2MX45BG0W4EM2WTGANZO">Width Constraint (Min=3.5mil) (Max=100mil) (Preferred=10mil) (Disabled)(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDRUCOG1LMFXLYOM4MXLYOY1BSYCFMF2WIKJRKSCND5O4NG3RXOXXG">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#ID5QC55FZ30NIIWLL53RAH4AZVOIC5PAXGKDHAMK5OF4FDR4BJOUJ">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDF3W21YZ0MK5CI5ZF0N5GOZKFXGYYB5O1JPNLPAFZXOAYQ0ZWTPXP">Hole Size Constraint (Min=0.025mm) (Max=2539.975mm) (All)</a></td>
+<td class="column1"><a href="#IDYRKLXBTEMLSZLTXUYBVFYPZMGFV3EFWOBPVA3CFXXYQCDTLVKX0H">Hole Size Constraint (Min=1mil) (Max=99999mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDPGNDM42TUWWVBFAX2JVURPAY0CMN4RKY1WLTF5C4UW3LWSJDREXL">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDTZED40YTTEFXCPTO0Z2ESSVI2CAKXWBV22LKMTLFDWY12BMEETOL">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDRAYZH42OQCN4ODAW33LMYFAVSFTUPBFBQUKTMLBPNTVG1UXXUVB">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDIRYR3TSCGUVKLQIU42AKOANFZEXM24WANEFKTOOKGC5TWOA1DXQB">Minimum Solder Mask Sliver (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDFKKWTZYW3FINOI43DEGKMSS15BUSVEXW3A42G0BV30YGIULWWSFC">Silk To Solder Mask (Clearance=0.15mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDG50JSMKQZPY5OKZURBY5MD4EWPTXTBW33U1GQ3M4C2BHHATVOIIC">Silk To Solder Mask (Clearance=5.906mil) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID2YG3Y35ZUZZBHSCP2NJGPQ51ZB5AKQ0QTJDBINQ5OLZ5UKPK2KM">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDE55OMNZMPJMYHK1FJH0BSXSUYM4KHKSKQMFWWZGNAIUMZLH4COMF">Silk to Silk (Clearance=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDEMPHS1UZNM3LLFRZRX3Z4AQIVHFZVKCH1UMPOCKIQNOUEFU3CJ5C">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDJ13WP3O1G5UVELTNJKXJVN5ECP4VQ3TCOW4AWKG2OT2EM2VY0XY">Net Antennae (Tolerance=0mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJ11E4SSRS4ZEHB3XVNA14U5VCDMKGUD423NVASOE4B12UZQPE4CP">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#ID0MKUHQ45P43TDDRTD0DCJD4F4PCE3JHP2R1KI4HUHJM2GWFYAPCH">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
