actuall final tho now

--- a/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
+++ b/G431_MCU_Board/Project Outputs for G431_MCU_Board/Design Rule Check - g431.html
@@ -61,7 +61,7 @@
 
 		.DRC_summary_header_col1 {
 			font-weight: bold;
-			width: 8em;
+			width: 9em;
 		}
 
 		.DRC_summary_header_col2 {
@@ -224,7 +224,7 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">6:08:14 PM</td>
+<td class="front_matter_column3">7:04:44 PM</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDPY1TED4ZYM32DPLT2UQWPYVCXFU12O1N1SKI3PNFKUYIEXHD4EYL"><h2>Summary</h2></a><table>
+</table><a name="IDWQM55N2X5PG4HVDN4MZXSTU31BTSMQOXGWY5WIIFHL55P5VKJJZN"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,55 +265,55 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDAXCZVCOG3NKYIJJYIXT3DZ13BKGSXPR0QXBRE1MI0YBYBO11F4DK">Clearance Constraint (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDLLX5MV2DLSEKDBDIN5G03DT0CBNZFJ12VMSTJNMRYU5HPFMDBH3B">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDH031QQEJ401XEKTKI0KKB3SEGJFGNGI4YRIC2WOZUC43O5CYCGEH">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDVF21GJSAA1PLCO2X0OEUBHOPZOICZUITY51NRUDAUXJVJOX03FDF">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDLX0UUTU0M0HEJ4QSQH1ZIPEGFKJWOSWIXRDL11GMOHJXLVMULL0J">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDSED522JN25W2FZ50S5GL4A1EOKHCYRKEW4DNVGJ3JUSSYE2Y0FB">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDKSCRMYWD53PUD0CPHJ3VHOEYII3Q2WJYYIMPOSKI2F0QU2CGQLCL">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDYYKUQCFZVWCMBMKR0ZBNYAYFYEIRFFL21OKU2JLNTD5NXCNYFJ">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJCW4RFD4BAEQPNOMS0J3PQQOUHSEJQ1Y2MX45BG0W4EM2WTGANZO">Width Constraint (Min=3.5mil) (Max=100mil) (Preferred=10mil) (Disabled)(All)</a></td>
+<td class="column1"><a href="#IDQCGZAIFGHTDEJ0Q0T30XCX2DCEGD5T31SIGTPFIJ32Z11YE5OZWH">Width Constraint (Min=0.089mm) (Max=2.54mm) (Preferred=0.254mm) (Disabled)(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID5QC55FZ30NIIWLL53RAH4AZVOIC5PAXGKDHAMK5OF4FDR4BJOUJ">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDV1EDQTKSJ5UZPPTZ5F54CKS54H2VMCTYZ5GEHSPRPQBCMQA3RB1">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDYRKLXBTEMLSZLTXUYBVFYPZMGFV3EFWOBPVA3CFXXYQCDTLVKX0H">Hole Size Constraint (Min=1mil) (Max=99999mil) (All)</a></td>
+<td class="column1"><a href="#IDGWZEBV0EVWVFGLE5UROIG0ZBSJZAUXMKVQNQFNCAH5J1UDWLAXDM">Hole Size Constraint (Min=0.025mm) (Max=2539.975mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTZED40YTTEFXCPTO0Z2ESSVI2CAKXWBV22LKMTLFDWY12BMEETOL">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDYXEHQGSYE5CNM12WSW0HFEFUNJ4BCK3CG3LEKNCI0PFZOYVM3IHJ">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDIRYR3TSCGUVKLQIU42AKOANFZEXM24WANEFKTOOKGC5TWOA1DXQB">Minimum Solder Mask Sliver (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDZEBUADENTTALPT1LW03PZREY0MZGBTW4VUJVEMLSP2PTPYVR4HWN">Minimum Solder Mask Sliver (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDG50JSMKQZPY5OKZURBY5MD4EWPTXTBW33U1GQ3M4C2BHHATVOIIC">Silk To Solder Mask (Clearance=5.906mil) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDC5VEEXQGAFBCDVKDCKZJ5E5T0FXUBUQVPTFWCUM4ES1V4YOWAUDF">Silk To Solder Mask (Clearance=0.15mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDE55OMNZMPJMYHK1FJH0BSXSUYM4KHKSKQMFWWZGNAIUMZLH4COMF">Silk to Silk (Clearance=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDLJN0ZAX2GRY1N5T3PR0KYY44EOSC3LGDGZBAHLCEJ11PGIVRSLME">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDJ13WP3O1G5UVELTNJKXJVN5ECP4VQ3TCOW4AWKG2OT2EM2VY0XY">Net Antennae (Tolerance=0mil) (All)</a></td>
+<td class="column1"><a href="#IDIYIEJFNPSXHNBK1OLGK0ZC4JBM4CHWF5ACPSDEI2ERJ1NPRE3TRH">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID0MKUHQ45P43TDDRTD0DCJD4F4PCE3JHP2R1KI4HUHJM2GWFYAPCH">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
+<td class="column1"><a href="#IDLC5A4OEIEUSPN1G3KXRVYDNJPLHY1IUJ0JOWYF1QD1VUNXES55">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
